--- a/QT GUI Aion Hack/QtGuiApplication1.qrc
+++ b/QT GUI Aion Hack/QtGuiApplication1.qrc
@@ -1,4 +1,6 @@
 <RCC>
-    <qresource prefix="QtGuiApplication1">
+    <qresource prefix="/QtGuiApplication1"/>
+    <qresource prefix="/images">
+        <file>Resources/loading.gif</file>
     </qresource>
 </RCC>
